# ayon-example-addon

./: .gitignore  README.md  __init__.py  create_package.py  package.py  settings.py
private/: pyproject.toml
public/: publicfile.txt
server/: __init__.py  actions.py  settings.py  site_settings.py
services/: .env  Dockerfile  Makefile  pyproject.toml
services/service/: __main__.py
