[tool.poetry]
name = "my-cool-service"
version = "1.0.2-dev1"
description = "My cool service"
authors = ["Martin Wacker <martin@ynput.io>"]

[tool.poetry.dependencies]
python = "^3.11"
nxtools = "^1.6"
ayon-python-api = "1.0.0rc3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
